new interface for built in drive callers (Reinhard Resch)

--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -14,6 +14,8 @@ MBDyn 1.X-Devel
 		- added screw joint (Mauro Manetti & Marco Morandini)
 		- added Umfpack solver iterative refinement support
 		  (Reinhard Resch)
+		- added built in drive callers interface to module-octave
+		  (Reinhard Resch)
 	Backward compatibility issues:
 		- old binary modal joint databases no longer supported
 	Known issues:
