--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -4658,7 +4658,7 @@ Otherwise, a list of \nt{mode\_damping} values follows.
 Each occurrence of \nt{mode\_damping} is made of the mode's index
 and the related damping value.
 
-A generalized damping matrix can be provided in the database;
+A generalized damping matrix can be provided in the database (as \kw{RECORD GROUP 13});
 it is used when \kw{damping from file} is specified, while it is ignored
 and overridden by all the other above specified forms
 of damping provided in the specification of the modal joint element.
