document scaling for umfpack and klu

--- a/mbdyn/manual/input/controldata.tex
+++ b/mbdyn/manual/input/controldata.tex
@@ -337,7 +337,7 @@ the experimental support for NetCDF output, which eventually
 will replace the current textual output:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{card} ::= \kw{output results} : \kw{netcdf} [ , \kw{no text} ] ;
+    \bnt{card} ::= \kw{output results} : \kw{netcdf} [ , \kw{sync} ] [ , \kw{no text} ] ;
 \end{Verbatim}
 %\end{verbatim}
 If the optional keyword \kw{no text} is present,
