--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -32,6 +32,7 @@ MBDyn 1.X-Devel
 		  (noted by Jens van Schelve)
 		- fix electric elements parsing (noted by Morten Ketelsen)
 		- fix parsing on win32: MinGW/MSYS (Reinhard Resch)
+		- fix naive multithread assembly bug
 
 MBDyn 1.5.4
 	Enhancements:
