--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -13,6 +13,7 @@ MBDyn 1.X-Devel
 	Enhancements:
 		- added screw joint (Mauro Manetti & Marco Morandini)
 	Backward compatibility issues:
+		- "overwrite" option of "setenv" changed
 	Known issues:
 		- Schur solver is broken
 		- TotalPinJoint inverse dynamics support is broken
