--- a/mbdyn/TODO
+++ b/mbdyn/TODO
@@ -273,6 +273,7 @@ E. Bugs/missing features:
 	- call nodes/elements in the order of definition (DONE)
 	- modal joint: binary file written in input order, but parsed in block ascending order (DONE)
 	- module-loadinc: improve initialization and handling of driven load increment element
+	- math parser: handle uninitialized values
 
 
 
