support explicit casting

--- a/mbdyn/manual/input/general.tex
+++ b/mbdyn/manual/input/general.tex
@@ -221,6 +221,9 @@ phase it is assigned the value of the current time.
 Table~\ref{tab:MATHP-OPERATORS} shows the supported mathematical 
 operators, while Table~\ref{tab:MATHP-FUNCTIONS} shows the built-in
 mathematical functions.
+In addition, type names used as functions provide explicit type casting
+according to built-in casting rules.
+
 The supported types are listed in Table~\ref{tab:MATHP-TYPES}.
 Table~\ref{tab:MATHP-VARS} lists the predefined variables; notice
 that they're treated exactly as user-defined variables, so they 
