--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -227,6 +227,28 @@ This module implements a family of simple muscle constitutive laws.
 Simple example of run-time loadable user-defined drive caller.
 
 
+\subsection{Module-randdrive}
+Generates normally distributed pseudo-random numbers
+with given mean and variance (standard deviation) using 
+the random number handling capabilities
+provided by Boost\footnote{\url{http://www.boost.org/}}.
+\begin{Verbatim}[commandchars=\\\{\}]
+    \bnt{drive_caller} ::= \kw{boost random} ,
+        (\ty{real}) \bnt{mean} , (\ty{real}) \bnt{variance}
+\end{Verbatim}
+The module itself supports load-time input parameters:
+\begin{Verbatim}[commandchars=\\\{\}]
+    \kw{module load} : "libmodule-randdrive"
+        [ , \{ \kw{seed} , (\ty{integer}) \bnt{seed} ]
+            | \kw{seed input file name} , " \bnt{seed_input_file_name} " \} ]
+        [ , \kw{seed output file name} , " \bnt{seed_output_file_name} " ]
+\end{Verbatim}
+where the integer \nt{seed} is used to seed the random number generator,
+whereas \nt{seed\_input\_file\_name} and \nt{seed\_output\_file\_name}
+are used to load/save the random number generator's state
+in Boost's internal format.
+
+
 
 \section{Template Drive Caller Modules}
 
